// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Script processor should not process scripts with a non valid type 1`] = `
<div>
  <script
    src="/"
    type="non-valid"
  />
</div>
`;

exports[`Script processor should process a script with code 1`] = `
<div>
  <mocked-script
    code="const some = \\"code\\";"
  />
</div>
`;

exports[`Script processor should process a script with src 1`] = `
<div>
  <mocked-script
    src="/some-js-file.js"
  />
</div>
`;

exports[`Script processor should process scripts with a valid type 1`] = `
<div>
  <mocked-script
    src="/"
    type="application/javascript"
  />
</div>
`;

exports[`Script processor should set data-src to src if provided 1`] = `
<div>
  <mocked-script
    src="/some-js-file.js"
  />
</div>
`;
